2011-01-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #12506: Add missing languages and/or missing TYPO3 language codes (Albanian, Canadian French, Filipino, Georgian, Khmer, Serbian)
	* Fixed issue #12508: Update countries to level of ISO 3166-1:2006 - Newsletter VI-8 (2010-12-15)
	* Fixed issue #10897: Missing (non-existent) territory for some countries
	* Fixed bugtracker issue #8739: Swiss Currency Symbols are wrong

2010-04-29  Franz Holzinger  <franz@ttproducts.de>

	* new feature: countriesAllowed gives the ordered ISO-3 codes of the countries which are allowed in the select box.

2010-01-31  Franz Holzinger  <franz@ttproducts.de>
	* fix bug in getTitleFromIsoCode: SQL error due to wrong starting AND in where statement
	* remove static_markets: New extension static_info_tables_markets
	* fix bug 10037: add Albacete to Spain
	* fix bug 10038: use TYPO3 internal language code if this exists instead of ISO code
	* fix bug 12854: getCurrentLanguage doesn't use FE language
	* fix bug 12145: static_info_tables, syntax errors in "ext_tables_static+adt.sql"
	* fix bug 0011739: Wrong abbreviations for german federal states
	* add Italian provinces
	* make Stanlislas Rolland <stanislas.rolland@sjbr.ca> the new maintainer of static_info_tables

2009-06-20  Franz Holzinger  <franz@ttproducts.de>
	* Fix bug 2397: loadTcaAdditions
	* Add the field 'deleted' to static_countries because some countries like 'Serbia and Montenegro' have been divided.
	* This makes it possible to keep lost countries for historical reasons.
	* Add the new countries Serbia and Montenegro
	* Add Dutch country zones
	* fix the telephone precall number for some countries
	* make Romania and Bulgaria to EU countries

2008-11-03  Franz Holzinger  <contact@fholzinger.com>
	* Fix bug 9351: Tennessee
	* fix getTitleFromIsoCode: empty where clause must be '1=1' to allow AND combinations
	* support for page module