@@ -848,6 +848,137 @@ INSERT INTO static_country_zones VALUES ('538', '0', 'NL', 'NLD', '528', 'OV', '
 INSERT INTO static_country_zones VALUES ('539', '0', 'NL', 'NLD', '528', 'UT', 'Utrecht', '');
 INSERT INTO static_country_zones VALUES ('540', '0', 'NL', 'NLD', '528', 'ZH', 'Zuid-Holland', '');
 INSERT INTO static_country_zones VALUES ('541', '0', 'NL', 'NLD', '528', 'ZE', 'Zeeland', '');
+INSERT INTO static_country_zones VALUES ('542', '0', 'FR', 'FRA', '250', 'FR-A', 'Alsace', '');
+INSERT INTO static_country_zones VALUES ('543', '0', 'FR', 'FRA', '250', 'FR-B', 'Aquitaine', '');
+INSERT INTO static_country_zones VALUES ('544', '0', 'FR', 'FRA', '250', 'FR-C', 'Auvergne', '');
+INSERT INTO static_country_zones VALUES ('545', '0', 'FR', 'FRA', '250', 'FR-D', 'Bourgogne', '');
+INSERT INTO static_country_zones VALUES ('546', '0', 'FR', 'FRA', '250', 'FR-E', 'Bretagne', '');
+INSERT INTO static_country_zones VALUES ('547', '0', 'FR', 'FRA', '250', 'FR-F', 'Centre', '');
+INSERT INTO static_country_zones VALUES ('548', '0', 'FR', 'FRA', '250', 'FR-G', 'Champagne-Ardenne', '');
+INSERT INTO static_country_zones VALUES ('549', '0', 'FR', 'FRA', '250', 'FR-H', 'Corse', '');
+INSERT INTO static_country_zones VALUES ('550', '0', 'FR', 'FRA', '250', 'FR-I', 'Franche-Comté', '');
+INSERT INTO static_country_zones VALUES ('551', '0', 'FR', 'FRA', '250', 'FR-J', 'Île-de-France', '');
+INSERT INTO static_country_zones VALUES ('552', '0', 'FR', 'FRA', '250', 'FR-K', 'Languedoc-Roussillon', '');
+INSERT INTO static_country_zones VALUES ('553', '0', 'FR', 'FRA', '250', 'FR-L', 'Limousin', '');
+INSERT INTO static_country_zones VALUES ('554', '0', 'FR', 'FRA', '250', 'FR-M', 'Lorraine', '');
+INSERT INTO static_country_zones VALUES ('555', '0', 'FR', 'FRA', '250', 'FR-N', 'Midi-Pyrénées', '');
+INSERT INTO static_country_zones VALUES ('556', '0', 'FR', 'FRA', '250', 'FR-O', 'Nord-Pas-de-Calais', '');
+INSERT INTO static_country_zones VALUES ('557', '0', 'FR', 'FRA', '250', 'FR-P', 'Basse-Normandie', '');
+INSERT INTO static_country_zones VALUES ('558', '0', 'FR', 'FRA', '250', 'FR-Q', 'Haute-Normandie', '');
+INSERT INTO static_country_zones VALUES ('559', '0', 'FR', 'FRA', '250', 'FR-R', 'Pays de la Loire', '');
+INSERT INTO static_country_zones VALUES ('560', '0', 'FR', 'FRA', '250', 'FR-S', 'Picardie', '');
+INSERT INTO static_country_zones VALUES ('561', '0', 'FR', 'FRA', '250', 'FR-T', 'Poitou-Charentes', '');
+INSERT INTO static_country_zones VALUES ('562', '0', 'FR', 'FRA', '250', 'FR-U', 'Provence-Alpes-Côte d\'Azur', '');
+INSERT INTO static_country_zones VALUES ('563', '0', 'FR', 'FRA', '250', 'FR-V', 'Rhône-Alpes', '');
+INSERT INTO static_country_zones VALUES ('564', '0', 'FR', 'FRA', '250', 'FR-01', 'Ain', '');
+INSERT INTO static_country_zones VALUES ('565', '0', 'FR', 'FRA', '250', 'FR-02', 'Aisne', '');
+INSERT INTO static_country_zones VALUES ('566', '0', 'FR', 'FRA', '250', 'FR-03', 'Allier', '');
+INSERT INTO static_country_zones VALUES ('567', '0', 'FR', 'FRA', '250', 'FR-04', 'Alpes-de-Haute-Provence', '');
+INSERT INTO static_country_zones VALUES ('568', '0', 'FR', 'FRA', '250', 'FR-05', 'Hautes-Alpes', '');
+INSERT INTO static_country_zones VALUES ('569', '0', 'FR', 'FRA', '250', 'FR-06', 'Alpes-Maritimes', '');
+INSERT INTO static_country_zones VALUES ('570', '0', 'FR', 'FRA', '250', 'FR-07', 'Ardèche', '');
+INSERT INTO static_country_zones VALUES ('571', '0', 'FR', 'FRA', '250', 'FR-08', 'Ardennes', '');
+INSERT INTO static_country_zones VALUES ('572', '0', 'FR', 'FRA', '250', 'FR-09', 'Ariège', '');
+INSERT INTO static_country_zones VALUES ('573', '0', 'FR', 'FRA', '250', 'FR-10', 'Aube', '');
+INSERT INTO static_country_zones VALUES ('574', '0', 'FR', 'FRA', '250', 'FR-11', 'Aude', '');
+INSERT INTO static_country_zones VALUES ('575', '0', 'FR', 'FRA', '250', 'FR-12', 'Aveyron', '');
+INSERT INTO static_country_zones VALUES ('576', '0', 'FR', 'FRA', '250', 'FR-13', 'Bouches-du-Rhône', '');
+INSERT INTO static_country_zones VALUES ('577', '0', 'FR', 'FRA', '250', 'FR-14', 'Calvados', '');
+INSERT INTO static_country_zones VALUES ('578', '0', 'FR', 'FRA', '250', 'FR-15', 'Cantal', '');
+INSERT INTO static_country_zones VALUES ('579', '0', 'FR', 'FRA', '250', 'FR-16', 'Charente', '');
+INSERT INTO static_country_zones VALUES ('580', '0', 'FR', 'FRA', '250', 'FR-17', 'Charente-Maritime', '');
+INSERT INTO static_country_zones VALUES ('581', '0', 'FR', 'FRA', '250', 'FR-18', 'Cher', '');
+INSERT INTO static_country_zones VALUES ('582', '0', 'FR', 'FRA', '250', 'FR-19', 'Corrèze', '');
+INSERT INTO static_country_zones VALUES ('583', '0', 'FR', 'FRA', '250', 'FR-2A', 'Corse-du-Sud', '');
+INSERT INTO static_country_zones VALUES ('584', '0', 'FR', 'FRA', '250', 'FR-2B', 'Haute-Corse', '');
+INSERT INTO static_country_zones VALUES ('585', '0', 'FR', 'FRA', '250', 'FR-21', 'Côte-d\'Or', '');
+INSERT INTO static_country_zones VALUES ('586', '0', 'FR', 'FRA', '250', 'FR-22', 'Côtes-d\'Armor', '');
+INSERT INTO static_country_zones VALUES ('587', '0', 'FR', 'FRA', '250', 'FR-23', 'Creuse', '');
+INSERT INTO static_country_zones VALUES ('588', '0', 'FR', 'FRA', '250', 'FR-24', 'Dordogne', '');
+INSERT INTO static_country_zones VALUES ('589', '0', 'FR', 'FRA', '250', 'FR-25', 'Doubs', '');
+INSERT INTO static_country_zones VALUES ('590', '0', 'FR', 'FRA', '250', 'FR-26', 'Drôme', '');
+INSERT INTO static_country_zones VALUES ('591', '0', 'FR', 'FRA', '250', 'FR-27', 'Eure', '');
+INSERT INTO static_country_zones VALUES ('592', '0', 'FR', 'FRA', '250', 'FR-28', 'Eure-et-Loir', '');
+INSERT INTO static_country_zones VALUES ('593', '0', 'FR', 'FRA', '250', 'FR-29', 'Finistère', '');
+INSERT INTO static_country_zones VALUES ('594', '0', 'FR', 'FRA', '250', 'FR-30', 'Gard', '');
+INSERT INTO static_country_zones VALUES ('595', '0', 'FR', 'FRA', '250', 'FR-31', 'Haute-Garonne', '');
+INSERT INTO static_country_zones VALUES ('596', '0', 'FR', 'FRA', '250', 'FR-32', 'Gers', '');
+INSERT INTO static_country_zones VALUES ('597', '0', 'FR', 'FRA', '250', 'FR-33', 'Gironde', '');
+INSERT INTO static_country_zones VALUES ('598', '0', 'FR', 'FRA', '250', 'FR-34', 'Hérault', '');
+INSERT INTO static_country_zones VALUES ('599', '0', 'FR', 'FRA', '250', 'FR-35', 'Ille-et-Vilaine', '');
+INSERT INTO static_country_zones VALUES ('600', '0', 'FR', 'FRA', '250', 'FR-36', 'Indre', '');
+INSERT INTO static_country_zones VALUES ('601', '0', 'FR', 'FRA', '250', 'FR-37', 'Indre-et-Loire', '');
+INSERT INTO static_country_zones VALUES ('602', '0', 'FR', 'FRA', '250', 'FR-38', 'Isère', '');
+INSERT INTO static_country_zones VALUES ('603', '0', 'FR', 'FRA', '250', 'FR-39', 'Jura', '');
+INSERT INTO static_country_zones VALUES ('604', '0', 'FR', 'FRA', '250', 'FR-40', 'Landes', '');
+INSERT INTO static_country_zones VALUES ('605', '0', 'FR', 'FRA', '250', 'FR-41', 'Loir-et-Cher', '');
+INSERT INTO static_country_zones VALUES ('606', '0', 'FR', 'FRA', '250', 'FR-42', 'Loire', '');
+INSERT INTO static_country_zones VALUES ('607', '0', 'FR', 'FRA', '250', 'FR-43', 'Haute-Loire', '');
+INSERT INTO static_country_zones VALUES ('608', '0', 'FR', 'FRA', '250', 'FR-44', 'Loire-Atlantique', '');
+INSERT INTO static_country_zones VALUES ('609', '0', 'FR', 'FRA', '250', 'FR-45', 'Loiret', '');
+INSERT INTO static_country_zones VALUES ('610', '0', 'FR', 'FRA', '250', 'FR-46', 'Lot', '');
+INSERT INTO static_country_zones VALUES ('611', '0', 'FR', 'FRA', '250', 'FR-47', 'Lot-et-Garonne', '');
+INSERT INTO static_country_zones VALUES ('612', '0', 'FR', 'FRA', '250', 'FR-48', 'Lozère', '');
+INSERT INTO static_country_zones VALUES ('613', '0', 'FR', 'FRA', '250', 'FR-49', 'Maine-et-Loire', '');
+INSERT INTO static_country_zones VALUES ('614', '0', 'FR', 'FRA', '250', 'FR-50', 'Manche', '');
+INSERT INTO static_country_zones VALUES ('615', '0', 'FR', 'FRA', '250', 'FR-51', 'Marne', '');
+INSERT INTO static_country_zones VALUES ('616', '0', 'FR', 'FRA', '250', 'FR-52', 'Haute-Marne', '');
+INSERT INTO static_country_zones VALUES ('617', '0', 'FR', 'FRA', '250', 'FR-53', 'Mayenne', '');
+INSERT INTO static_country_zones VALUES ('618', '0', 'FR', 'FRA', '250', 'FR-54', 'Meurthe-et-Moselle', '');
+INSERT INTO static_country_zones VALUES ('619', '0', 'FR', 'FRA', '250', 'FR-55', 'Meuse', '');
+INSERT INTO static_country_zones VALUES ('620', '0', 'FR', 'FRA', '250', 'FR-56', 'Morbihan', '');
+INSERT INTO static_country_zones VALUES ('621', '0', 'FR', 'FRA', '250', 'FR-57', 'Moselle', '');
+INSERT INTO static_country_zones VALUES ('622', '0', 'FR', 'FRA', '250', 'FR-58', 'Nièvre', '');
+INSERT INTO static_country_zones VALUES ('623', '0', 'FR', 'FRA', '250', 'FR-59', 'Nord', '');
+INSERT INTO static_country_zones VALUES ('624', '0', 'FR', 'FRA', '250', 'FR-60', 'Oise', '');
+INSERT INTO static_country_zones VALUES ('625', '0', 'FR', 'FRA', '250', 'FR-61', 'Orne', '');
+INSERT INTO static_country_zones VALUES ('626', '0', 'FR', 'FRA', '250', 'FR-62', 'Pas-de-Calais', '');
+INSERT INTO static_country_zones VALUES ('627', '0', 'FR', 'FRA', '250', 'FR-63', 'Puy-de-Dôme', '');
+INSERT INTO static_country_zones VALUES ('628', '0', 'FR', 'FRA', '250', 'FR-64', 'Pyrénées-Atlantiques', '');
+INSERT INTO static_country_zones VALUES ('629', '0', 'FR', 'FRA', '250', 'FR-65', 'Hautes-Pyrénées', '');
+INSERT INTO static_country_zones VALUES ('630', '0', 'FR', 'FRA', '250', 'FR-66', 'Pyrénées-Orientales', '');
+INSERT INTO static_country_zones VALUES ('631', '0', 'FR', 'FRA', '250', 'FR-67', 'Bas-Rhin', '');
+INSERT INTO static_country_zones VALUES ('632', '0', 'FR', 'FRA', '250', 'FR-68', 'Haut-Rhin', '');
+INSERT INTO static_country_zones VALUES ('633', '0', 'FR', 'FRA', '250', 'FR-69', 'Rhône', '');
+INSERT INTO static_country_zones VALUES ('634', '0', 'FR', 'FRA', '250', 'FR-70', 'Haute-Saône', '');
+INSERT INTO static_country_zones VALUES ('635', '0', 'FR', 'FRA', '250', 'FR-71', 'Saône-et-Loire', '');
+INSERT INTO static_country_zones VALUES ('636', '0', 'FR', 'FRA', '250', 'FR-72', 'Sarthe', '');
+INSERT INTO static_country_zones VALUES ('637', '0', 'FR', 'FRA', '250', 'FR-73', 'Savoie', '');
+INSERT INTO static_country_zones VALUES ('638', '0', 'FR', 'FRA', '250', 'FR-74', 'Haute-Savoie', '');
+INSERT INTO static_country_zones VALUES ('639', '0', 'FR', 'FRA', '250', 'FR-75', 'Paris', '');
+INSERT INTO static_country_zones VALUES ('640', '0', 'FR', 'FRA', '250', 'FR-76', 'Seine-Maritime', '');
+INSERT INTO static_country_zones VALUES ('641', '0', 'FR', 'FRA', '250', 'FR-77', 'Seine-et-Marne', '');
+INSERT INTO static_country_zones VALUES ('642', '0', 'FR', 'FRA', '250', 'FR-78', 'Yvelines', '');
+INSERT INTO static_country_zones VALUES ('643', '0', 'FR', 'FRA', '250', 'FR-79', 'Deux-Sèvres', '');
+INSERT INTO static_country_zones VALUES ('644', '0', 'FR', 'FRA', '250', 'FR-80', 'Somme', '');
+INSERT INTO static_country_zones VALUES ('645', '0', 'FR', 'FRA', '250', 'FR-81', 'Tarn', '');
+INSERT INTO static_country_zones VALUES ('646', '0', 'FR', 'FRA', '250', 'FR-82', 'Tarn-et-Garonne', '');
+INSERT INTO static_country_zones VALUES ('647', '0', 'FR', 'FRA', '250', 'FR-83', 'Var', '');
+INSERT INTO static_country_zones VALUES ('648', '0', 'FR', 'FRA', '250', 'FR-84', 'Vaucluse', '');
+INSERT INTO static_country_zones VALUES ('649', '0', 'FR', 'FRA', '250', 'FR-85', 'Vendée', '');
+INSERT INTO static_country_zones VALUES ('650', '0', 'FR', 'FRA', '250', 'FR-86', 'Vienne', '');
+INSERT INTO static_country_zones VALUES ('651', '0', 'FR', 'FRA', '250', 'FR-87', 'Haute-Vienne', '');
+INSERT INTO static_country_zones VALUES ('652', '0', 'FR', 'FRA', '250', 'FR-88', 'Vosges', '');
+INSERT INTO static_country_zones VALUES ('653', '0', 'FR', 'FRA', '250', 'FR-89', 'Yonne', '');
+INSERT INTO static_country_zones VALUES ('654', '0', 'FR', 'FRA', '250', 'FR-90', 'Territoire de Belfort', '');
+INSERT INTO static_country_zones VALUES ('655', '0', 'FR', 'FRA', '250', 'FR-91', 'Essonne', '');
+INSERT INTO static_country_zones VALUES ('656', '0', 'FR', 'FRA', '250', 'FR-92', 'Hauts-de-Seine', '');
+INSERT INTO static_country_zones VALUES ('657', '0', 'FR', 'FRA', '250', 'FR-93', 'Seine-Saint-Denis', '');
+INSERT INTO static_country_zones VALUES ('658', '0', 'FR', 'FRA', '250', 'FR-94', 'Val-de-Marne', '');
+INSERT INTO static_country_zones VALUES ('659', '0', 'FR', 'FRA', '250', 'FR-95', 'Val-d\'Oise', '');
+INSERT INTO static_country_zones VALUES ('660', '0', 'FR', 'FRA', '250', 'FR-GP', 'Guadeloupe', '');
+INSERT INTO static_country_zones VALUES ('661', '0', 'FR', 'FRA', '250', 'FR-GF', 'Guyane française', 'French Guiana');
+INSERT INTO static_country_zones VALUES ('662', '0', 'FR', 'FRA', '250', 'FR-MQ', 'Martinique', 'Martinique');
+INSERT INTO static_country_zones VALUES ('663', '0', 'FR', 'FRA', '250', 'FR-RE', 'La Réunion', 'Réunion');
+INSERT INTO static_country_zones VALUES ('664', '0', 'FR', 'FRA', '250', 'FR-CP', 'Clipperton', '');
+INSERT INTO static_country_zones VALUES ('665', '0', 'FR', 'FRA', '250', 'FR-YT', 'Mayotte', '');
+INSERT INTO static_country_zones VALUES ('666', '0', 'FR', 'FRA', '250', 'FR-NC', 'Nouvelle-Calédonie', 'New Caledonia');
+INSERT INTO static_country_zones VALUES ('667', '0', 'FR', 'FRA', '250', 'FR-PF', 'Polynésie française', 'French Polynesia');
+INSERT INTO static_country_zones VALUES ('668', '0', 'FR', 'FRA', '250', 'FR-BL', 'Saint-Barthélemy', 'Saint Barthélemy');
+INSERT INTO static_country_zones VALUES ('669', '0', 'FR', 'FRA', '250', 'FR-MF', 'Saint-Martin', 'Saint Martin');
+INSERT INTO static_country_zones VALUES ('670', '0', 'FR', 'FRA', '250', 'FR-PM', 'Saint-Pierre-et-Miquelon', 'Saint Pierre and Miquelon');
+INSERT INTO static_country_zones VALUES ('671', '0', 'FR', 'FRA', '250', 'FR-TF', 'Terres australes françaises', 'French Southern Territories');
+INSERT INTO static_country_zones VALUES ('672', '0', 'FR', 'FRA', '250', 'FR-WF', 'Wallis-et-Futuna', 'Wallis and Futuna');
 
 
 
